--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,2 @@
-server.port=8090
+spring.profiles.active=dev
 server.servlet.context-path=/weather/app
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/weather-app
-spring.datasource.username=postgres
-spring.datasource.password=chewby
-
-
-#spring.jpa.database=POSTGRESQL
-#spring.sql.init.platform=postgres
-spring.jpa.show-sql=true
-#spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-# swagger-ui custom path
-springdoc.swagger-ui.path=/swagger-ui.html
